# SecretStore

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: args.rs  base64_encode_decode.rs  commands.rs  encrypt_decrypt.rs  login.rs  main.rs  secret_store.rs
src-next/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
src-next/app/: globals.css  layout.tsx  page.tsx
src-next/app/file-loader/: page.tsx
src-next/app/file-loader/forms/: CreateNew.tsx  FromExisting.tsx
src-next/app/file-loader/from-existing/: page.tsx
src-next/app/logins/: page.tsx
src-next/components/: CreateLoginModal.tsx  EditLoginModal.tsx  LockStateContext.tsx  LoginDetail.tsx  LoginDetailDropdownMenu.tsx  LoginDetailField.tsx  LoginIcon.tsx  LoginsList.tsx  LoginsSideBarButton.tsx  LoginsSidebar.tsx  TitleBar.tsx
src-next/types/: Login.tsx  LoginFilter.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: changesets.rs  ffi.rs  login.rs  main.rs  secret_store.rs
src-tauri/src/entity/: changeset.rs  login.rs  mod.rs
