[package]
name = "secret_store"
version = "0.1.0"
description = "Toy implementation of a basic password manager in Rust using SQLCipher with 256-bit AES encryption"
authors = ["Harrison Shelnutt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = "1.0.79"
rusqlite = { version = "0.30.0", features = ["bundled-sqlcipher-vendored-openssl"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "clipboard-read-text", "clipboard-write-text", "shell-open", "path-all", "dialog-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
